--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html lang="en-US">
 
 <head>
@@ -31,8 +30,8 @@
 		<!-- front page --><div id="q0" class="toggleDiv">
 		<p>      Are you over 18 years old?                </p>
 		<div class="buttons_block clearfix">
-		<a href="http://dasboard.advix.us/tracking202/redirect/rtr.php?t202id=9156&amp;t202pubid=5044273fa6&amp;c1=WARIOR&amp;t202ref=WARIOR&amp;t202kw="><button class="show_hide button btnno">       No                                                                                </button></a>
-		<a href="http://dasboard.advix.us/tracking202/redirect/rtr.php?t202id=9156&amp;t202pubid=5044273fa6&amp;c1=WARIOR&amp;t202ref=WARIOR&amp;t202kw="><button class="show_hide button btnyes">        Yes                                                                                </button></a>
+		<a href="http://famille.site/2VQq9"><button class="show_hide button btnno">       No                                                                                </button></a>
+		<a href="http://famille.site/2VQq9"><button class="show_hide button btnyes">        Yes                                                                                </button></a>
 		</div>
 		</div>
 		</body>
