--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 		<!-- front page --><div id="q0" class="toggleDiv">
 		<p>      Are you over 18 years old?                </p>
 		<div class="buttons_block clearfix">
-		<a href="http://famille.site/2VQq9"><button class="show_hide button btnno">       No                                                                                </button></a>
-		<a href="http://famille.site/2VQq9"><button class="show_hide button btnyes">        Yes                                                                                </button></a>
+		<a href="http://famille.site/MAWQO"><button class="show_hide button btnno">       No                                                                                </button></a>
+		<a href="http://famille.site/MAWQO"><button class="show_hide button btnyes">        Yes                                                                                </button></a>
 		</div>
 		</div>
 		</body>
