--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <link href="https://cdn-ath.akamaized.net/images/jump-favicon.ico" rel="icon" type="image/x-icon" />
         <meta content="" name="keywords"><meta content="" name="description"><link rel="stylesheet" type="text/css" href="https://cdn-ath.akamaized.net/404">
-		<script type="text/javascript" src="../ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script type="text/javascript" src="ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script type="text/javascript" src="https://cdn-ath.akamaized.net/404"></script>
 		<script type="text/javascript" src="https://cdn-ath.akamaized.net/404"></script>
 		</head><body  style="" ><div id="main_bg">
