--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </script>
 
         <link href="https://cdn-ath.akamaized.net/images/jump-favicon.ico" rel="icon" type="image/x-icon" />
-        <meta content="" name="keywords"><meta content="" name="description"><link rel="stylesheet" type="text/css" href="https://cdn-ath.akamaized.net/404">
+        <meta content="" name="keywords"><meta content="" name="description"><link rel="stylesheet" type="text/css" href="cdn-ath.akamaized.net/landings/78846/1508247846/css/style.css">
 		<script type="text/javascript" src="ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script type="text/javascript" src="https://cdn-ath.akamaized.net/404"></script>
-		<script type="text/javascript" src="https://cdn-ath.akamaized.net/404"></script>
+		<script type="text/javascript" src="cdn-ath.akamaized.net/landings/78846/1508247846/js/script.js"></script>
+		<script type="text/javascript" src="cdn-ath.akamaized.net/landings/78846/1508247846/js/avsc4.js"></script>
 		</head><body  style="" ><div id="main_bg">
 		<div class="slide1"></div><div class="slide2"></div>
 		<div class="slide3"></div><div class="slide4"></div>
