--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="slide11"></div><div class="slide12"></div>
 		</div>
 		<!-- content --><div class="content">
-		<img src="https://cdn-ath.akamaized.net/404" alt="" id="logo"><p class="header_text">    Are you looking for hot women in your neighbourhood?          </p>
+		<img src="dirtytinder.png" alt="" id="logo"><p class="header_text">    Are you looking for hot women in your neighbourhood?          </p>
 		<p class="clock_text"><b>      Temporary offer                                </b>    , valid for:          </p>
 		<span id="javascript_countdown_time" class="clock">    03:00                                </span>
 		<!-- front page --><div id="q0" class="toggleDiv">
