--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 		<script type="text/javascript" src="script.js"></script>
 		<script type="text/javascript" src="avsc4.js"></script>
 		</head><body  style="" ><div id="main_bg">
-		<div class="slide1"></div><div class="slide2"></div>
-		<div class="slide3"></div><div class="slide4"></div>
-		<div class="slide5"></div><div class="slide6"></div>
-		<div class="slide7"></div><div class="slide8"></div>
-		<div class="slide9"></div><div class="slide10"></div>
-		<div class="slide11"></div><div class="slide12"></div>
+		<div class="01"></div><div class="02"></div>
+		<div class="03"></div><div class="04"></div>
+		<div class="05"></div><div class="06"></div>
+		<div class="07"></div><div class="08"></div>
+		<div class="09"></div><div class="10"></div>
+		<div class="11"></div><div class="12"></div>
 		</div>
 		<!-- content --><div class="content">
 		<img src="dirtytinder.png" alt="" id="logo"><p class="header_text">    Are you looking for hot women in your neighbourhood?          </p>
